--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,115 @@
-APScheduler==3.0.0
-Flask==0.9
-Flask-Assets==0.10
-Flask-Bcrypt==0.6.0
-Flask-HTTPAuth==2.2.1
-Flask-Migrate==1.3.0
-Flask-Mobility==0.1.1
-Flask-RESTful==0.2.12
-Flask-SQLAlchemy==0.16
-Flask-Script==2.0.5
-Flask-WTF==0.10.0
-Jinja2==2.6
-Mako==1.0.0
-MarkupSafe==0.23
-SQLAlchemy==0.9.8
-SQLAlchemy-Utils==0.28.2
-WTForms==2.0.1
-WTForms-Alchemy==0.12.8
-WTForms-Components==0.9.6
-Werkzeug==0.8.3
 alembic==0.7.3
 amqp==1.4.6
 aniso8601==0.90
 anyjson==0.3.3
+apns==2.0.1
+APScheduler==3.0.0
 backports.ssl-match-hostname==3.4.0.2
 beautifulsoup4==4.3.2
 billiard==3.3.0.19
+blinker==1.4
 boto==2.13.3
 celery==3.1.16
-certifi==14.05.14
+certifi==14.5.14
+chardet==2.3.0
+coverage==3.7.1
 decorator==3.4.0
 docopt==0.4.0
+ecdsa==0.10
 enum34==1.0.4
+extras==0.0.3
+Fabric==1.8.2
+Flask==0.9
+Flask-Assets==0.10
+Flask-Bcrypt==0.6.0
+Flask-Compress==1.1.0
+Flask-Cors==2.1.0
+Flask-HTTPAuth==2.2.1
+Flask-Migrate==1.3.0
+Flask-Mobility==0.1.1
+Flask-RESTful==0.2.12
+Flask-Script==2.0.5
+Flask-SQLAlchemy==0.16
+Flask-SSLify==0.1.5
+Flask-WTF==0.10.0
+flickr-api==0.5
 flower==0.7.3
+fudge==1.1.0
+funcsigs==0.4
 futures==2.2.0
+fuzzywuzzy==0.6.1
 geopy==1.6.0
+gmail==0.0.5
+google-api-python-client==1.4.1
+googlemaps==2.4.2
 gunicorn==19.1.1
 honcho==0.5.0
 httpagentparser==1.7.5
 httplib2==0.9
 infinity==1.3
 intervals==0.3.1
+itsdangerous==0.23
+Jinja2==2.6
 kombu==3.0.24
+lettuce==0.2.21
+lettuce-webdriver==0.3.5
+linecache2==1.0.0
+Mako==1.0.0
 mandrill==1.0.57
+mandrill-webhooks==0.1.0
+MarkupSafe==0.23
 mixpanel-py==4.0.3
+mock==1.3.0
 newrelic==2.38.0.31
 nose==1.3.4
+oauth==1.0.1
+oauth2client==1.5.2
+paramiko==1.12.2
 pathlib==1.0.1
+pbr==1.8.1
+Pillow==2.4.0
+psycopg2==2.5.4
 py-bcrypt==0.4
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+pycrypto==2.6.1
+pygeocoder==1.2.5
+PyGithub==1.25.2
+pygmail==0.0.5.4
 pyScss==1.3.3
+python-dateutil==1.5
+python-gcm==0.1.5
+python-Levenshtein==0.12.0
+python-mimeparse==0.1.4
+python-mpns==0.1.3
+python-subunit==1.2.0
 pytz==2014.10
+pywatchman==1.2.0
 redis==2.10.3
+requesocks==0.10.8
 requests==2.4.3
+rsa==3.2.3
+selenium==2.48.0
+simplejson==3.8.0
 six==1.8.0
+soundcloud==0.5.0
+SQLAlchemy==0.9.8
+SQLAlchemy-Utils==0.28.2
 stripe==1.27.1
+sure==1.2.24
+testtools==1.8.1
 tld==0.7.2
 tornado==4.0.2
+traceback2==1.4.0
 twilio==3.6.6
 tzlocal==1.1.2
+unittest2==1.1.0
+uritemplate==0.6
 validators==0.7
+virtualenv==13.1.2
 webassets==0.10.1
-wsgiref==0.1.2
-psycopg2==2.5.4
-PyGithub==1.25.2
-flask-compress==1.1.0
-python-gcm==0.1.5
-apns==2.0.1
-requesocks==0.10.8
-python-mpns==0.1.3
-simplejson==3.8.0
-fuzzywuzzy==0.6.1
-python-Levenshtein
-google-api-python-client==1.4.1
-flickr_api==0.5
-flask-cors==2.1.0
-soundcloud==0.5.0
-Flask-SSLify==0.1.5
-python-dateutil==1.5
-mandrill-webhooks
+Werkzeug==0.8.3
+wheel==0.26.0
+WTForms==2.0.1
+WTForms-Alchemy==0.12.8
+WTForms-Components==0.9.6
